--- a/portfolio.html
+++ b/portfolio.html
@@ -29,7 +29,7 @@
       <section class="one" id="home"> 
         <div class="home-content">
           <h1>Hi, I'm Ivan Mark Dumlao</h1>
-          <h3>I'm <span class="multiText"></span></h3>
+          <h3>I'm a <span class="multiText"></span></h3>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi unde beatae nobis itaque reprehenderit magni, iste ipsum debitis recusandae aliquid et deleniti, pariatur dolores illum blanditiis obcaecati fugit, impedit porro.</p>
           <a href="#" class="btn">Hire Me</a>
         </div>
@@ -46,16 +46,12 @@
       </section>
 
       <section class="about" id="about">
-        <div class="about-content">
-          <div class="glowing-diamond">
-            <span></span>
-            <span></span>
-            <div class="about-image">
-              <img src="profile2.png" alt="">
-            </div>
+        <div class="shadow">
+          <div class="glowing-triangle"></div>
+          <div class="about-image">
+            <img src="profile2.png" alt="">
           </div>
         </div>
-
       </section>
 
     <section class="services" id="services">
@@ -185,24 +181,6 @@
     </section>
 
     <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
-    <script>
-    setTimeout(function () {
-        var typed = new Typed('.multiText', {
-            strings: ['Web Developer', 'Programmer'],
-            loop: true,
-            typeSpeed: 100,
-            backSpeed: 80,
-            backDelay: 1500
-        });
-    }, 2000); // 2000 milliseconds (2 seconds) delay
-</script>
-
-
-
-
-
-
-
 
    
   </body>
