--- a/portfolio.html
+++ b/portfolio.html
@@ -48,10 +48,18 @@
       <section class="about" id="about">
         <div class="shadow">
           <div class="glowing-triangle"></div>
-          <div class="about-image">
-            <img src="profile2.png" alt="">
-          </div>
         </div>
+        <div class="about-image">
+          <img src="profile1.png" alt="">
+        </div>
+
+        <div class="about-content">
+          <h1>About Me</h1>
+          <p>Lorem ipsumLorem ipsum dolor sit amet consectetu rLorem ipsum dolor sit amet consecteturL orem ipsum dolor sit amet cons ecteturLorem ipsum dolor sit amet consecteturLorem ipsum dolor sit amet consectetur Lorem Lorem ipsum dolor sit amet consec teturLorem ipsum dolor sit amet consect eturipsum dolor sit amet consectetur dolor sit amet consectetur adipisi cing elit. Sequi unde beatae nobis itaque reprehen derit magni, iste ipsum debitis recusandae aliquid et deleniti, pariatur dolores illum blanditiis obcaecati fugit, impedit porro.</p>
+          <a href="#" class="btn">Resume</a>
+        </div>
+
+
       </section>
 
     <section class="services" id="services">
@@ -72,7 +80,6 @@
           <button></button>
         </div>
       </div>
-    </div>
 
 >
     </section>
