--- a/portfolio.html
+++ b/portfolio.html
@@ -47,7 +47,11 @@
 
       <section class="about" id="about">
         <div class="shadow">
-          <div class="glowing-triangle"></div>
+          <div class="glowing-triangle">
+            <div class="triangle">
+              
+            </div>
+          </div>
         </div>
         <div class="about-image">
           <img src="profile1.png" alt="">
@@ -188,6 +192,13 @@
     </section>
 
     <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
+
+
+
+
+
+
+
 
    
   </body>
