--- a/portfolio.html
+++ b/portfolio.html
@@ -68,24 +68,11 @@
 
     <section class="services" id="services">
       <h1>Services</h1>
-      <div class="container1">
-        <div class="card">
-          <h2>Web Design</h2>
-          <p>Lveniam officia nulla ipsum, minima quasi quisquam modi unde, natus eligendi!</p>
-          <span>Hover here</span>
-          <div class="pic"></div>
-          <button></button>
-        </div>
-        <div class="card card2">
-          <h2>Web Design</h2>
-          <p>Lveniam officia nulla ipsum, minima quasi quisquam modi unde, natus eligendi!</p>
-          <span>Hover here</span>
-          <div class="pic2"></div>
-          <button></button>
-        </div>
+      <div class="services-content">
+        <div class="services-box1"></div>
+        <div class="services-box2"></div>
+        <div class="services-box3"></div>
       </div>
-
->
     </section>
 
     <section class="skills" id="skills">
